# chaindocs_MCP_example

./: .env.example  .gitignore  .gitignore copy  README.md  package-lock.json  package.json  pyproject.toml
sample_documents/: architecture.txt  getting-started.md
scripts/: check_licenses.py  run_local.sh  setup.sh  test.sh  test_coverage.sh
src/langchain_documents_mcp_server/: config.py  document_store.py  errors.py  server.py
tests/: test_config.py  test_document_store.py  test_document_store_extended.py  test_main.py  test_server.py
